--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon dist/app.js",
-    "watch": "tsc -w"
+    "dev:win":"start /b tsc -w & nodemon dist/app.js",
+    "schemas:openapi":"swagger-jsdoc -d src/routes/definition.yaml src/routes/*.ts \"src/routes/!(definition).yaml\" -o src/schemas/openapi.json",
+    "schemas:types":"openapi-typescript src/schemas/openapi.json -o src/schemas/index.d.ts",
+    "schemas":"npm run schemas:openapi & npm run schemas:types",
+    "copyfiles":"copyfiles -u 1 src/schemas/*.json dist/src",
+    "watch": "tsc -w",
+    "dev": "npm run schemas && npm run copyfiles && start/b tsc -w & nodemon dist/app.js"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-openapi-validator": "^5.5.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
+    "copyfiles": "^2.4.1",
     "nodemon": "^3.1.10",
+    "openapi-typescript": "^7.8.0",
+    "swagger-jsdoc": "^6.2.8",
     "typescript": "^5.8.3"
   }
 }
